--- a/hymnchtv/index.html
+++ b/hymnchtv/index.html
@@ -36,7 +36,7 @@
 		</header>
 
 		<div class="caption light animated wow fadeInDown clearfix">
-			<h1>书拉密女小站-诗歌本</h1>
+			<h1>书拉密女-诗歌本</h1>
 			<p>安卓设计的赞美诗歌词页面浏览器,查看和播放器</p>
 			<hr>
 		</div>
@@ -44,13 +44,16 @@
 		<div class="shadow">
 			<p align="center">
         <a href="https://github.com/cmeng-git/hymnchtv">
-          <img src="img/hymnchtv.png" alt="HymnchTv" align="inline" width="8%" style="margin:5px 30px 20px 0px"/>
+          <img src="img/hymnchtv.png" alt="HymnchTv" align="inline" width="5%" style="margin:5px 20px 20px 0px"/>
+        </a>
+        <a href="./faq.html">
+          <img src="img/help.png" alt="FAQ" align="inline" width="5%" style="margin:5px 20px 20px 0px"/>
         </a>
   	    <a href="https://play.google.com/store/apps/details?id=org.cog.hymnchtv&hl=en">
-          <img src="img/google_play.png" alt="Google PlayStore" align="inline" width="20%" style="margin:5px 30px 20px 0px"/>
+          <img src="img/google_play.png" alt="Google PlayStore" align="inline" width="15%" style="margin:5px 20px 20px 0px"/>
         </a>
 		    <a href="https://youtu.be/D8FKFfcUxPw" class="fancybox animated wow flipInX" data-wow-duration="2s">
-          <img src="img/youtube.png" alt="YouTube" align="inline" width="10%" style="margin:5px 30px 20px 0px"/>
+          <img src="img/youtube.png" alt="YouTube" align="inline" width="5%" style="margin:5px 20px 20px 0px"/>
 		    </a>
 			</p>
 		</div>
@@ -59,7 +62,7 @@
 
 	<div class="feature light">
     <h2>特征和工能</h2>
-    <h3>书拉密女小站-诗歌本: 为安卓设计的赞美诗歌词页面浏览器,查看和播放器</h3>
+    <h3>书拉密女-诗歌本: 为安卓设计的赞美诗歌词页面浏览器,查看和播放器</h3>
     <ul>
       <li>使用最新的 Android Pager Adapter 进行平滑滚动更顺畅</li>
       <li>直接输入诗歌编号以显示歌词；或从目录分类进入："诗歌类别"，"笔画索引"，"拼音索引"，和"英中对照"</li>
