--- a/atalk/index.html
+++ b/atalk/index.html
@@ -95,6 +95,7 @@
       <li>XEP-0184: Message Delivery Receipts with user enable/disable option</li>
       <li>XEP-0251: Jingle Session Transfer: Support both Unattended and Attended call transfer</li>
       <li>XEP-0391: Jingle Encrypted Transports for OMEMO encrypted media file sharing</li>
+      <li>Implement call waiting to accept a second incoming call by placing the in-progress call on hold; and allow switching between calls</li>
       <li>Implement Jabber VoIP-PBX gateway Telephony, allowing PBX phone call via service gateway</li>
       <li><a href="./faq.html#feature_03">Multi-user chat</a> Join or create room with full room configuration support for owner</li>
       <li>Integrated captcha protected room user interface with retry on failure</li>
