add Notion option info

--- a/atalk/faq.html
+++ b/atalk/faq.html
@@ -80,7 +80,7 @@ ul li {
    
    <div style='clear: both; height: 10px;'></div>
 
-   <div class='innerText'><image src="./img/qrcode_atalk_faq.png" align="right" width="25%" style="margin:5px 0px 20px 15px"/></div>
+   <div class='innerText'></div>
    <div class='innerText'>This FAQ section is created to provide a better understanding
       to aTalk users on the application features and observed behaviour. This section
       will continuously be updated as inputs are feedback from aTalk users.
@@ -91,6 +91,7 @@ ul li {
    <div id='subSection' onclick=$("#accordion").accordion("disable")>CONTENT</div> 
    <div id="accordion">
      <h4>aTalk UI desgin &amp; Implementation</h4>
+     <image src="./img/atalk_help_qrcode.png" align="right" width="20%" style="margin:5px 0px 20px 15px"/>
      <ul>
        <li><a href=#ui_01>[20200619] aTalk UI design &amp; Implementation</a></li>
      </ul>
