update privacy policy title

--- a/atalk/privacypolicy.html
+++ b/atalk/privacypolicy.html
@@ -62,7 +62,7 @@
 </head>
 
 <div id='ppBody'>
-	<div id='ppHeader'>Privacy Policy</div>
+	<div id='ppHeader'>aTalk Privacy Policy</div>
 	
 	<div class='ppConsistencies'>
 		<div class='col-2'>
