--- a/hymnchtv/privacypolicy_hymnchtv.html
+++ b/hymnchtv/privacypolicy_hymnchtv.html
@@ -62,7 +62,7 @@
 </head>
 
 <div id='ppBody'>
-	<div id='ppHeader'>Privacy Policy</div>
+	<div id='ppHeader'>Hymnchtv Privacy Policy</div>
 	
 	<div class='ppConsistencies'>
 		<div class='col-2'>
